<resources>

    <string name="text">面带笑容，不气馁往前冲，我愈挫愈勇！！</string>

    <string name="app_name">爱选修</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="activity_course_list">分类</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="course_loading">课程加载中...</string>
    <string name="title_course_detail">课程信息</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">全文</string>

    <integer name="app_version_code">3</integer>
    <string name="app_version">1.0.2</string>
    <string name="proj_name">ShareSDK Socialization</string>
    <string name="sm_item_comment_like">评论与赞</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @ShareSDK</string>
    <string name="share_content_short">ShareSDK不仅集成简单、支持如微信、新浪微博、腾讯微博等社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @ShareSDK</string>
    <string name="comment_like_id">ssdk20131220190000</string>
    <string name="comment_like_title">ShareSDK“评论与赞”模块发布</string>
    <string name="comment_like_publich_time">2013-12-20 19:00</string>
    <string name="comment_like_author">ShareSDK</string>
    <string name="comment_like_comment_list">跟帖</string>
    <string name="like_success">点赞成功</string>
    <string name="like_fail">点赞失败</string>
    <string name="myplatform">自定义平台</string>
    <string name="title_comment_course">评论课程</string>
    <string name="toast_empty_content">内容还没填写哦</string>
    <string name="toast_comment_success">评论提交成功</string>
    <string name="toast_course_not_found">课程不存在</string>
    <string name="toast_star_success">收藏成功</string>
    <string name="toast_search_failed">查询失败 </string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_delete">删除</string>
    <string name="title_confirm_delete_favorite">要删除收藏吗</string>
    <string name="toast_delete_success">删除成功</string>
    <string name="toast_delete_failed">删除失败</string>
    <string name="toast_learned">已经学过了</string>
    <string name="toast_wanted">已经想学过了</string>
    <string name="toast_want_success">添加到想学课程成功</string>
    <string name="commet_loading">评论加载中...</string>
    <string name="toast_comment_load_failed">"评论加载失败 "</string>
    <string name="toast_nobody_comment">还没有人评论这门课</string>
    <string name="text_say_nothing">这个家伙很懒，什么都没有说</string>
    <string name="toast_course_list_empty">找不到该类课程</string>
    <string name="searching">搜索中...</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="input_content">输入课程名称</string>
    <string name="webbrowser">浏览器</string>
    <string name="title_search_course">搜索课程</string>
    <string name="title_course_list">课程列表</string>
    <string name="title_all_course">所有课程</string>
    <string name="title_hot_course">热门课程</string>
    <string name="title_recommend_course">推荐课程</string>
    <string name="title_nosign_course">不点名课程</string>
    <string name="loading">Loading</string>
    <string name="action_open_in_browser">用浏览器打开</string>
    <string name="dialog_file_need_download">文件需下载后方可查看</string>
    <string name="dialog_confirm_download">确定下载吗</string>
    <string name="download">下载</string>
    <string name="open_with_browser">用浏览器打开</string>
    <string name="title_mine">我的课程</string>
    <string name="title_course_category">课程分类</string>
    <string name="more">更多</string>
    <string name="title_comment_list">评论</string>
    <string name="toast_no_more_course">没有更多课程啦</string>
    <string name="title_perfect_course">完善课程</string>
    <string name="text_wrong_info">信息有误？</string>
    <string name="none_for_now">暂无</string>
    <string name="app_intro">大学生选修课交流平台</string>
    <string name="toast_content_too_long">字数超过限制</string>
    <string name="improve_submit_success">提交成功，感谢您的反馈</string>
    <string name="title_add_post">发表讨论</string>
    <string name="title_post_cate">分类</string>
    <string name="toast_empty_not_allowed">内容不能为空哦</string>
    <string name="toast_send_success">发表成功</string>
    <string name="title_post_list">讨论列表</string>
    <string name="title_post_detail">详情</string>
    <string name="toast_no_more_post">没有更多讨论啦</string>
    <string name="toast_post_list_empty">还没有讨论</string>
    <string name="nick">昵称</string>
    <string name="toast_last_step">完成这一步就能注册成功了</string>
    <string name="title_setting">设置</string>
    <string name="title_add_comment">添加评论</string>
    <string name="text_hot_comments">这些评论很火</string>
    <string name="title_post">讨论区</string>
    <string name="title_start_lesson">我要开课</string>
    <string name="message_push">消息通知</string>
    <string name="toast_start_lesson_success">开课成功</string>
    <string name="btn_upload_cover">上传封面</string>
    <string name="uploading">上传中</string>
    <string name="please_wait">请稍候</string>
    <string name="start_lesson">自主开课</string>
    <string name="please_upload_cover">请上传封面图</string>
    <string name="toast_short_text_not_allow">内容不得少于20字</string>

    <string name="preference_dialog_message">This is an example of a dialog message.</string>
    <string name="preference_dialog_title">Dialog Title</string>
    <string name="material_dialog_pref_title">Dialog Preference</string>
    <string name="material_dialog_pref_summary">This is an example of a basic dialog preference that automatically uses Material Dialogs to show the dialog.</string>
    <string name="list_pref_title">List Preference</string>
    <string name="list_pref_desc">This is an example of a list preference that automatically uses Material Dialogs to show the list dialog.</string>
    <string name="multilist_pref_title">Multi Select List Preference</string>
    <string name="multilist_pref_desc">This is an example of a multi select list preference that automatically uses Material Dialogs to show the list dialog.</string>
    <string name="edittext_pref_title">EditText Preference</string>
    <string name="edittext_pref_desc">This is an example of an EditText preference that automatically uses Material Dialogs to show the input dialog.</string>
    <string name="edittext_pref_dialogtitle">Enter a Name</string>
    <string name="edittext_pref_optionalvalue">Default value</string>
    <string name="optional_dialog_message">This is an optional dialog message.</string>
    <string name="click_to_login">点击登录</string>
    <string name="text_check_update">检查更新</string>
    <string name="about_ixuanxiu">关于爱选修</string>
    <string name="exit">退出</string>
    <string name="sign_text">个性签名</string>
    <string name="sex">性别</string>
    <string name="change_pass">修改密码</string>
    <string name="password">密码</string>
    <string name="avatar">头像</string>
    <string name="sign_no_text">未填写</string>
    <string name="change">修改</string>
    <string name="toast_pass_empty_not_allowed">密码不能为空哦</string>
    <string name="toast_pass_not_same">两次密码不一致</string>
    <string name="title_user_info_edit">个人信息</string>
    <string name="title_change_pass">修改密码</string>
    <string name="not_writed">未填写</string>
    <string name="change_sex">修改性别</string>
    <string name="toast_change_sex_success">性别修改成功</string>
    <string name="toast_change_pass_success">密码修改成功，可以用新密码进行登录啦</string>
    <string name="dialog_write_sign">填写个性签名</string>
    <string name="submit">提交</string>
    <string name="hint_sign">个性签名</string>
    <string name="toast_change_sign_success">个性签名修改成功</string>
    <string name="toast_change_nick_success">昵称修改成功</string>
    <string name="dialog_change_nick">修改昵称</string>
    <string name="man">汉子</string>
    <string name="woman">妹子</string>
    <string name="hint_nick">昵称</string>
    <string name="toast_upload_avatar_success">头像上传成功</string>
    <string name="app_about"><b>爱选修</b>是一个大学生选修课交流互动平台。在这里你可以找到不点名的课程、提前查看选课信息、给课程评价打分、找人一起上选修课、关注热门课程、蹭好课、和别人共享教材等等。还等什么，快来和大家一起爱上选修课吧！</string>
    <string name="title_about">关于</string>
    <string name="follow_wechat">关注微信</string>
    <string name="wechat_number">lovexuanxiu</string>
    <string name="share_ixuanxiu">分享爱选修</string>
    <string name="title_latest_course">最新课程</string>
    <string name="toast_already_login">已登录</string>
    <string name="intro_page">引导界面</string>
    <string name="text_to_improve">我来完善</string>
    <string name="toast_need_login">登录后方可进行此操作</string>
    <string name="toast_locked_account">账号已被锁定，请联系管理员</string>
    <string name="share_code">邀请好友注册</string>
    <string name="get_share_code_success">成功生成邀请码</string>
    <string name="recommend_to_friends">推荐给好友</string>
    <string name="copy_share_code">复制邀请码</string>
    <string name="copy_to_keyboard">已复制到剪贴板</string>
    <string name="tips_share_code">Tips: 分享爱选修给有需要的小伙伴，Ta用你的邀请码注册成功后，你就可以获得声望值奖励。</string>
    <string name="serialnumber">邀请码</string>
    <string name="skip">跳过</string>
    <string name="easy_to_find">方便小伙伴们认出你来</string>
    <string name="upload_avatar">上传</string>
    <string name="yaoqingma">邀请码</string>
    <string name="code_not_exist">邀请码不存在</string>
    <string name="username_to_fill">用户名未填写</string>
    <string name="password_to_fill">密码未填写</string>
    <string name="code_to_fill">邀请码未填写</string>
    <string name="title_add_course">添加课程</string>
    <string name="toast_no_favorite_course">还没有收藏课程</string>
    <string name="toast_no_learned_course">还没有学过的课程</string>
    <string name="toast_no_want_course">还没有想学的课程</string>
    <string name="toast_no_comment">还没有评论</string>
</resources>
