<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_avatart"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/avatar" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            fresco:placeholderImage="@drawable/load_default_bg"
            fresco:placeholderImageScaleType="fitCenter"
            fresco:roundAsCircle="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_nick"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/nick"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/secondarytext"
            android:textSize="16sp"
            tools:text="用户名" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_sex"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/sex"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/secondarytext"
            android:textSize="16sp"
            tools:text="男" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_pass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/secondarytext"
            android:textSize="16sp"
            android:text="@string/change" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_sign"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/sign_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/secondarytext"
            android:textSize="16sp"
            tools:text="@string/not_writed" />

    </RelativeLayout>


</LinearLayout>