<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="头像"
        android:textSize="20sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"
        app:border_color="#fff"
        app:border_width="2dp" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/upload"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/primarycolor"
        android:text="@string/upload_avatar" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/skip"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/primarycolor"
        android:text="@string/skip" />

    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/skip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/easy_to_find" />

</RelativeLayout>