<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"
        app:border_color="#fff"
        app:border_width="2dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:hint="@string/nick"
        android:inputType="text"
        android:paddingLeft="6dp"
        android:textCursorDrawable="@drawable/edittext_cursor_blue"
        app:met_baseColor="@color/primarytextcolor"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="填写真实姓名，方便小伙伴们找到你"
        app:met_maxCharacters="14"
        app:met_primaryColor="@color/secondarytext"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@color/secondarytext" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="密码"
        android:inputType="textPassword"
        android:paddingLeft="6dp"
        android:textCursorDrawable="@drawable/edittext_cursor_blue"
        app:met_baseColor="@color/primarytextcolor"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="检查一下，不要填错了哦"
        app:met_maxCharacters="20"
        app:met_primaryColor="@color/secondarytext"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@color/secondarytext" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/code"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/serialnumber"
        android:inputType="text"
        android:paddingLeft="6dp"
        android:textCursorDrawable="@drawable/edittext_cursor_blue"
        app:met_baseColor="@color/primarytextcolor"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="邀请码可在lovexuanxiu微信获取"
        app:met_maxCharacters="10"
        app:met_primaryColor="@color/secondarytext"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@color/secondarytext" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/register"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/primarycolor"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/toast_last_step" />

</RelativeLayout>