<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="爱选修"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_about"
        android:textSize="16sp" />

    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/follow_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/primarycolor"
        android:text="@string/follow_wechat" />

    <TextView
        android:id="@+id/wechat_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/follow_wechat"
        android:layout_centerHorizontal="true"
        android:text="@string/wechat_number"
        android:textColor="@color/secondarytext" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="©2015 南京工业大学绿荫工作室" />

</RelativeLayout>