<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_userinfo"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            fresco:placeholderImage="@drawable/load_default_bg"
            fresco:placeholderImageScaleType="fitCenter"
            fresco:roundAsCircle="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="用户名" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondarytext"
                tools:text="159****1502" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_mine"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_school_grey600_24dp"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/title_mine"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_push"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_notifications_none_grey600_24dp"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/message_push"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_update"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_system_update_tv_grey600_24dp"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/text_check_update"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_aspect_ratio_grey600_24dp"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/about_ixuanxiu"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_share_grey600_24dp"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/share_ixuanxiu"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_exit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_layout_bg"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_forward"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/exit"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>
